--- a/index.html
+++ b/index.html
@@ -366,14 +366,14 @@
         <p>Jemne pikantná a svieža, s jemnou reďkovkovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Lupina-modal">
-        <img src="Lupine Red.jpg" alt="Nový produkt 9">
+        <img src="Lupine Red.jpg" alt="Lupina">
         <h3>Lupina<br>Lupine</h3>
         <p>Jemne horká a oriešková, s bohatou zemitou chuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy10-modal">
-        <img src="novy10.jpg" alt="Nový produkt 10">
-        <h3>Nový produkt 10</h3>
-        <p>Krátky popis produktu 10.</p>
+      <div class="microgreen-card" data-modal="Červená kapusta-modal">
+        <img src="Cabbage.jpg" alt="Červená kapusta 10">
+        <h3>Červená kapustabr>Red Cabbage</h3>
+        <p>Jemne sladkastá a chrumkavá, s typickou kapustovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy11-modal">
         <img src="novy11.jpg" alt="Nový produkt 11">
@@ -1423,8 +1423,8 @@ Vychutnajte si jemnú korenistú chuť a výživové benefity v každom súste! 
   <div id="Lupina-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Lupíny (Lupine)</h3>
-      <pre>Lupínové microgreens majú jemnú orechovú chuť a sú výnimočne bohaté na bielkoviny, vhodné ako súčasť vyváženej stravy. 🌱
+      <h3>Benefity Lupiny (Lupine)</h3>
+      <pre>Lupinové microgreens majú jemnú orechovú chuť a sú výnimočne bohaté na bielkoviny, vhodné ako súčasť vyváženej stravy. 🌱
 
 🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
 ✅ Kalórie: 35 kcal
@@ -1466,7 +1466,7 @@ Lupínové microgreens sú univerzálne! Vyskúšajte ich v neotvorených kombin
 • 🍛 V indických karí – doplňte ich k špenátovému paneeru aleba cícorkovému dalu.
 
 ⚠️ Alergény:
-Lupína patrí medzi silné alergény podľa nariadenia EÚ č. 1169/2011. Môže vyvolať alergické reakcie u citlivých osôb.
+Lupina patrí medzi silné alergény podľa nariadenia EÚ č. 1169/2011. Môže vyvolať alergické reakcie u citlivých osôb.
 
 🔎 Dôležité upozornenie:
 Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
@@ -1476,14 +1476,68 @@ Všetky zdravotné tvrdenia sú overené v registri EÚ.
 
 Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 
-Objavte svet výživy s orechovou jemnosťou lupínových microgreens! 🌰🚀</pre>
+Objavte svet výživy s orechovou jemnosťou lupinových microgreens! 🌰🚀</pre>
     </div>
   </div>
-  <div id="novy10-modal" class="modal">
+  <div id="Červená kapusta-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 10</h3>
-      <pre>Informácie o Nový produkt 10 budú dostupné čoskoro.</pre>
+      <h3>Benefity Červenej kapusty (Red Cabbage)</h3>
+      <pre>Červená kapusta microgreens majú jemnú sladkastú chuť s náznakom korenistosti a sú plné živín, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 33 kcal
+✅ Bielkoviny: 3,2 g
+✅ Sacharidy: 5,8 g
+✅ Vláknina: 3,6 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v microgreens červenej kapusty:
+• 🌞 Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• 👁️ Vitamín A – prispieva k udržaniu normálneho videnia.
+• ⚡ Vitamín B6 – prispieva k normálnej funkcii imunitného systému.
+
+🔵 Minerály v microgreens červenej kapusty:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Antokyány – prírodné farbivá s antioxidačnými vlastnosťami.
+• 🧪 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🔥 Vláknina – podporuje zdravú črevnú mikroflóru.
+
+💡 Prečo zaradiť červenú kapustu do stravy?
+✅ Vitamín C a antokyány – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje pravidelnú činnosť čriev.
+❤️ Draslík a horčík – prispievajú k normálnej činnosti srdca.
+🦴 Vápnik a vitamín K – prispievajú k udržaniu zdravých kostí.
+
+👉 Tip:
+Červená kapusta microgreens sú univerzálne! Vyskúšajte ich v netradičných kombináciách:
+• 🥢 V domácom kimchi – pridajte ich do fermentovanej zeleninovej zmesi.
+• 🍷 Ako ozdobu k syrovým doskám – doplňte k ovčiemu syru a červenému vínu.
+• 🎄 V zimných šalátoch – kombinujte s pečenou tekvicou, granátovým jablkom a orechmi.
+• 🥩 Na grilovanom mäse – posypte na steak aleba bravčové karé.
+• 🌯 V letných rožkoch – zabalte s hummusom, červenou repou a rukolou.
+• 🍹 V detox šťavách – zmiešajte s červenou repou, jablkom a zázvorom.
+
+⚠️ Alergény:
+Červená kapusta patrí medzi brukvovité rastliny (čeľaď Brassicaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky antokyanov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si živú farbu a výživovú silu v každom súste! 🍷🎨</pre>
     </div>
   </div>
   <div id="novy11-modal" class="modal">
