--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@
       </div>
       <div class="microgreen-card" data-modal="Červená kapusta-modal">
         <img src="Cabbage.jpg" alt="Červená kapusta 10">
-        <h3>Červená kapustabr>Red Cabbage</h3>
+        <h3>Červená kapusta<br>Red Cabbage</h3>
         <p>Jemne sladkastá a chrumkavá, s typickou kapustovou príchuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy11-modal">
-        <img src="novy11.jpg" alt="Nový produkt 11">
-        <h3>Nový produkt 11</h3>
-        <p>Krátky popis produktu 11.</p>
+      <div class="microgreen-card" data-modal="Toskánsky čierny kel-modal">
+        <img src="Kale, Tuscan Black.jpg" alt="Toskánsky čierny kel">
+        <h3>Toskánsky čierny kel<br>Kale, Tuscan Black</h3>
+        <p>Jemný a zemito sladkastý, s bohatou kapustovou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy12-modal">
         <img src="novy12.jpg" alt="Nový produkt 12">
@@ -1540,11 +1540,66 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Vychutnajte si živú farbu a výživovú silu v každom súste! 🍷🎨</pre>
     </div>
   </div>
-  <div id="novy11-modal" class="modal">
+  <div id="Toskánsky čierny kel-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 11</h3>
-      <pre>Informácie o Nový produkt 11 budú dostupné čoskoro.</pre>
+      <h3>Toskánsky čierny kel (Kale, Tuscan Black)</h3>
+      <pre>Toskánsky čierny kel microgreens majú intenzívnu, zemitú chuť a sú plné živín, vhodné pre milovníkov výrazných chutí ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 38 kcal
+✅ Bielkoviny: 3,5 g
+✅ Sacharidy: 5,2 g
+✅ Vláknina: 3,8 g
+✅ Tuky: 0,5 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v microgreens toskánskej čiernej kapusty:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamín B6 – prispieva k normálnej funkcii imunitného systému.
+
+🔵 Minerály v microgreens toskánskej čiernej kapusty:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Kvercetín – flavonoid s antioxidačnými vlastnosťami.
+• 🔥 Glukozinoláty – prispievajú k prirodzeným detoxikačným procesom*.
+
+💡 Prečo zaradiť toskánsku čiernu kapustu do stravy?
+✅ Vitamín C a kvercetín – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+❤️ Draslík a horčík – prispievajú k normálnej činnosti srdca a svalov.
+🦴 Vápnik a vitamín K – prispievajú k udržaniu zdravých kostí.
+
+👉 Tip:
+Toskánska čierna kapusta microgreens sú ideálne pre odvážne kombinácie:
+• 🍝 V talianskych cestovinách – pridajte do aglio e olio s čili vločkami.
+• 🧉 V zelených kokteiloch – zmiešajte s ginom, limetkou a medovou šťavou.
+• 🥑 V vegánskych rolkách – zabalte do nori s avokádom, wasabi a rýžovými nudličkami.
+• 🥘 V jednohubkách – posypte na mini quiche s hubami a syrom.
+• 🌶️ V pikantných omáčkach – pridajte do chimichurri na grilované mäso.
+• 🍵 V matcha latte – posypte na penovú vrstvu pre kontrast farieb.
+• 🥚 V špeciálnych raňajkách – doplňte k poached vajíčkam na kváskovom chlebe.
+
+⚠️ Alergény:
+Toskánsky čierny kel patrí medzi brukvovité rastliny (čeľaď Brassicaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky glukozinolátov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Preskúmajte hĺbku chutí a výživy s každým kúskom! 🖤🍴</pre>
     </div>
   </div>
   <div id="novy12-modal" class="modal">
