--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
         <h3>Toskánsky čierny kel<br>Kale, Tuscan Black</h3>
         <p>Jemný a zemito sladkastý, s bohatou kapustovou chuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy12-modal">
-        <img src="novy12.jpg" alt="Nový produkt 12">
-        <h3>Nový produkt 12</h3>
-        <p>Krátky popis produktu 12.</p>
+      <div class="microgreen-card" data-modal="Mungo fazuľa-modal">
+        <img src="Mung Bean.jpg" alt="Mungo fazuľa">
+        <h3>Mungo fazuľa<br>Mung Bean</h3>
+        <p>Jemná a svieža, s ľahko orechovou a chrumkavou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy13-modal">
         <img src="novy13.jpg" alt="Nový produkt 13">
@@ -1543,7 +1543,7 @@ Vychutnajte si živú farbu a výživovú silu v každom súste! 🍷🎨</pre>
   <div id="Toskánsky čierny kel-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Toskánsky čierny kel (Kale, Tuscan Black)</h3>
+      <h3>Benefity Toskánskeho čierneho kelu (Kale, Tuscan Black)</h3>
       <pre>Toskánsky čierny kel microgreens majú intenzívnu, zemitú chuť a sú plné živín, vhodné pre milovníkov výrazných chutí ako súčasť vyváženej stravy. 🌱
 
 🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
@@ -1602,11 +1602,65 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Preskúmajte hĺbku chutí a výživy s každým kúskom! 🖤🍴</pre>
     </div>
   </div>
-  <div id="novy12-modal" class="modal">
+  <div id="Mungo fazuľa-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 12</h3>
-      <pre>Informácie o Nový produkt 12 budú dostupné čoskoro.</pre>
+      <h3>Benefity Mungo Fazuľových Microgreens (Mung Bean Microgreens)</h3>
+      <pre>Mungo fazuľové microgreens majú jemnú, sviežu chuť s náznakom sladkosti a sú výnimočne bohaté na živiny, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 31 kcal
+✅ Bielkoviny: 3,3 g
+✅ Sacharidy: 5,0 g
+✅ Vláknina: 2,7 g
+✅ Tuky: 0,3 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v mungo fazuľových microgreens:
+• 🌞 Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamíny B-komplex – prispievajú k normálnemu energetickému metabolizmu.
+• 👁️ Vitamín A – prispieva k udržaniu normálneho videnia.
+
+🔵 Minerály v mungo fazuľových microgreens:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🦴 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Enzýmy – podporujú trávenie a vstrebávanie živín.
+• 🧪 Antioxidanty (kvercetín, vitexín) – chránia bunky pred poškodením.
+• 💧 Vysoký obsah vody – prispieva k hydratácii organizmu.
+
+💡 Prečo zaradiť mungo fazuľové microgreens do stravy?
+✅ Bielkoviny a vláknina – podporujú sýtosť a zdravé trávenie.
+🌱 Vitamín C a antioxidanty – prispievajú k ochrane imunitného systému.
+⚡ Horčík a vitamíny B – podporujú energiu a nervový systém.
+
+👉 Tip:
+Mungo fazuľové microgreens sú univerzálne! Vyskúšajte ich v neočakávaných kombináciách:
+• 🌯 V mexických burrito bowl – pridajte k čiernym fazuľám, kukurici a avokádu.
+• 🍣 V vegánskom sushi – nahraďte ryžu listom nori s microgreens a marinovaným tofu.
+• 🥥 V kokosových curry – posypte na thajskú zeleninovú polievku s kokosovým mliekom.
+• 🥗 V letných papárových rožkoch – zabalte s mangom, koriandrom a arašidovou omáčkou.
+• 🍹 V detox green juice – zmiešajte s jablkom, zelerom a limetkou.
+• 🧁 Ako ozdobu na polievkové guľky – doplňte ich k wokovaným nudlím s sezamom.
+• 🍳 V špenátových frittatách – pridajte do zmesi s feta syrom a cherry paradajkami.
+
+⚠️ Alergény:
+Mungo fazuľa patrí medzi strukoviny (čeľaď Fabaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u osôb citlivých na strukoviny.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky enzýmov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Preskúmajte svet sviežosti a kreatívnej výživy! 🌏✨</pre>
     </div>
   </div>
   <div id="novy13-modal" class="modal">
