--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
         <h3>Mungo fazuľa<br>Mung Bean</h3>
         <p>Jemná a svieža, s ľahko orechovou a chrumkavou chuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy13-modal">
-        <img src="novy13.jpg" alt="Nový produkt 13">
-        <h3>Nový produkt 13</h3>
-        <p>Krátky popis produktu 13.</p>
+      <div class="microgreen-card" data-modal="Červená šošovica-modal">
+        <img src="Lentis Red.jpg" alt="Červená šošovica">
+        <h3>Červená šošovica<br>Red Lentils/h3>
+        <p>Jemná a mierne sladkastá, s hladkou šošovicovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy14-modal">
         <img src="novy14.jpg" alt="Nový produkt 14">
@@ -1663,11 +1663,64 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Preskúmajte svet sviežosti a kreatívnej výživy! 🌏✨</pre>
     </div>
   </div>
-  <div id="novy13-modal" class="modal">
+  <div id="Červená šošovica-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 13</h3>
-      <pre>Informácie o Nový produkt 13 budú dostupné čoskoro.</pre>
+      <h3>Benefity Červenej Šošovice (Lentils, Red)</h3>
+      <pre>Červená šošovicové microgreens majú jemnú orechovú chuť a sú výnimočne bohaté na bielkoviny, vhodné pre vegetariánov aj milovníkov exotických chutí. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 34 kcal
+✅ Bielkoviny: 3,6 g
+✅ Sacharidy: 5,3 g
+✅ Vláknina: 3,4 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v microgreens červenej šošovice:
+• 🌞 Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamíny B1, B6, B9 – prispievajú k normálnej tvorbe energie a krvi.
+
+🔵 Minerály v microgreens červenej šošovice:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🦴 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Vysoký obsah bielkovín – ideálne pre rast svalovej hmoty.
+• 🧪 Antioxidanty (polyfenoly) – chránia bunky pred poškodením.
+• 🌱 Enzýmy – podporujú trávenie a metabolizmus.
+
+💡 Prečo zaradiť červenú šošovicu do stravy?
+✅ Bielkoviny a železo – vhodné pre vegetariánov a ľudí s nízkou hladinou železa.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+⚡ Vitamíny B – prispievajú k normálnej funkcii nervového systému.
+
+👉 Tip:
+Červená šošovicové microgreens oživia každé jedlo! Vyskúšajte ich v netradičných receptoch:
+• 🧆 V falafele – pridajte do cícorkovej zmesi pred pečením.
+• 🥙 V libanonských meze – posypte na hummus spolu s olivovým olejom a sumakom.
+• 🍛 V indickom dhale – doplňte ich k červenej šošovicovej polievke s kokosom.
+• 🫔 V mexických enfrijoladas – použite ako polevu na tortilly plnené fazuľami.
+• 🥗 V superfood bowloch – kombinujte s quinou, pečenou zeleninou a tahini.
+• 🍔 V vegánskych burgroch – vmiešajte do cesta z čiernej fazule a batátov.
+• 🍵 V zelených latte – posypte na matcha latte s kokosovým mliekom.
+
+⚠️ Alergény:
+Červená šošovica patrí medzi strukoviny (čeľaď Fabaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky enzýmov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Objavte exotické chute a výživovú silu v každom súste! 🌍🔥</pre>
     </div>
   </div>
   <div id="novy14-modal" class="modal">
