--- a/index.html
+++ b/index.html
@@ -390,10 +390,10 @@
         <h3>Červená šošovica<br>Red Lentils/h3>
         <p>Jemná a mierne sladkastá, s hladkou šošovicovou príchuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy14-modal">
-        <img src="novy14.jpg" alt="Nový produkt 14">
-        <h3>Nový produkt 14</h3>
-        <p>Krátky popis produktu 14.</p>
+      <div class="microgreen-card" data-modal="Cícer-modal">
+        <img src="Chickpea.jpg" alt="Cícer">
+        <h3>Cícer<br>Chickpea</h3>
+        <p>Jemný a svieži, s jemnou orieškovou a hráškovou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy15-modal">
         <img src="novy15.jpg" alt="Nový produkt 15">
@@ -1723,11 +1723,65 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Objavte exotické chute a výživovú silu v každom súste! 🌍🔥</pre>
     </div>
   </div>
-  <div id="novy14-modal" class="modal">
+  <div id="Cícer-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 14</h3>
-      <pre>Informácie o Nový produkt 14 budú dostupné čoskoro.</pre>
+      <h3>Benefity Cícerových Microgreens (Chickpea)</h3>
+      <pre>Cícerové microgreens majú jemnú orechovú chuť a sú bohaté na bielkoviny, vhodné pre milovníkov zdravého stravovania. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 35 kcal
+✅ Bielkoviny: 3,8 g
+✅ Sacharidy: 5,5 g
+✅ Vláknina: 3,3 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v cícerových microgreens:
+• 🌞 Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamíny B1, B6 – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v cícerových microgreens:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🦴 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Vláknina – podporuje zdravú črevnú mikroflóru.
+• 🧪 Antioxidanty (polyfenoly) – chránia bunky pred poškodením.
+• 🌱 Enzýmy – podporujú trávenie a vstrebávanie živín.
+
+💡 Prečo zaradiť cícerové microgreens do stravy?
+✅ Bielkoviny a železo – ideálne pre vegetariánov a aktívnych ľudí.
+🌱 Vláknina – podporuje pravidelnú činnosť čriev.
+⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+
+👉 Tip:
+Cícerové microgreens oživia každé jedlo! Vyskúšajte ich v neotvorených kombináciách:
+• 🥙 V dolmades – zabalte do viniových listov s ryžou, mätou a citrónom.
+• 🍝 V pestových cestovinách – nahraďte bazalku microgreens a vlašskými orechmi.
+• 🍳 Na šakšuke – posypte na vajcia pečené v paradajkovej omáčke s paprikou.
+• 🧆 V gréckych kroketách – pridajte do zmesi z cíceru, koriandra a čili.
+• 🥣 V marockom kuskuse – zmiešajte so sušenými slivkami, skoricou a mandľami.
+• 🥞 V slaných lívancoch – vmiešajte do cesta s cuketou, fetou a cesnakom.
+• 🍵 V zelených smoothies – kombinujte s ananásom, špenátom a kefírom.
+• 🧀 V grilovanom halloumi – posypte na syr s medom a sezamovými semienkami.
+
+⚠️ Alergény:
+Cícer patrí medzi strukoviny (čeľaď Fabaceae). Nie je zoznamovaný medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u osôb citlivých na strukoviny.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky enzýmov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Preskúmajte mediteránnu chuť a výživovú silu v každom súste! 🏺🌞</pre>
     </div>
   </div>
   <div id="novy15-modal" class="modal">
