--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
         <h3>Cícer<br>Chickpea</h3>
         <p>Jemný a svieži, s jemnou orieškovou a hráškovou chuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy15-modal">
-        <img src="novy15.jpg" alt="Nový produkt 15">
-        <h3>Nový produkt 15</h3>
-        <p>Krátky popis produktu 15.</p>
+      <div class="microgreen-card" data-modal="Hrášok Dunn-modal">
+        <img src="Pea Salad.jpg" alt="Hrášok Dunn">
+        <h3>Hrášok Dunn<br>Dunn Pea</h3>
+        <p>Svieži a jemný, s lahodnou sladkou chuťou mladého hrášku.</p>
       </div>
       <div class="microgreen-card" data-modal="novy16-modal">
         <img src="novy16.jpg" alt="Nový produkt 16">
@@ -1784,11 +1784,65 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Preskúmajte mediteránnu chuť a výživovú silu v každom súste! 🏺🌞</pre>
     </div>
   </div>
-  <div id="novy15-modal" class="modal">
+  <div id="Hrášok Dunn-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 15</h3>
-      <pre>Informácie o Nový produkt 15 budú dostupné čoskoro.</pre>
+      <h3>Benefity Dunn Hrachových Microgreens (Dunn Pea)</h3>
+      <pre>Dunn hrachové microgreens majú jemnú sladkastú chuť s náznakom sviežosti a sú výživovo bohaté, vhodné pre všetky stravovacie preferencie. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 32 kcal
+✅ Bielkoviny: 3,4 g
+✅ Sacharidy: 5,7 g
+✅ Vláknina: 3,1 g
+✅ Tuky: 0,3 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v Dunn hrachových microgreens:
+• 🌞 Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamíny B1, B2, B3 – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v Dunn hrachových microgreens:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🦴 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Antioxidanty (luteín, zeaxantín) – chránia oči a bunky.
+• 🌱 Enzýmy – podporujú trávenie a metabolizmus živín.
+
+💡 Prečo zaradiť Dunn hrachové microgreens do stravy?
+✅ Bielkoviny a vláknina – podporujú sýtosť a zdravé trávenie.
+🌱 Vitamín C a antioxidanty – prispievajú k ochrane imunitného systému.
+⚡ Horčík a vitamíny B – podporujú energiu a nervový systém.
+
+👉 Tip:
+Dunn hrachové microgreens sú univerzálne! Vyskúšajte ich v originálnych kombináciách:
+• 🥪 V dánskych smørrebrød – posypte na žitný chlieb s údeným lososom a koprom.
+• 🥘 V afrických tagine – pridajte do duseného mäsa so slivkami a šafránom.
+• 🥞 V sladkých lívancoch – kombinujte s borůvkovým kompótom a ricottou.
+• 🍢 V japonských tempura – posypte na vyprážanú zeleninu so sójovým dipom.
+• 🥑 V perských šalátoch – zmiešajte s granátovým jablkom, pistáciami a mätou.
+• 🍲 V islandských rybích polievkach – doplňte k treske a zemiakom.
+• 🧁 V slaných muffinoch – vmiešajte do cesta s olivami a feta syrom.
+• 🌯 V tureckých dürüme – zabalte s grilovaným mletým mäsom a jogurtovou omáčkou.
+
+⚠️ Alergény:
+Hrach patrí medzi strukoviny (čeľaď Fabaceae). Nie je zoznamovaný medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky enzýmov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Preskúmajte svetové chute s jemnou sladkosťou Dunn hrachu! 🌍🌿</pre>
     </div>
   </div>
   <div id="novy16-modal" class="modal">
