--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
         <h3>Hrášok Dunn<br>Dunn Pea</h3>
         <p>Svieži a jemný, s lahodnou sladkou chuťou mladého hrášku.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy16-modal">
-        <img src="novy16.jpg" alt="Nový produkt 16">
-        <h3>Nový produkt 16</h3>
-        <p>Krátky popis produktu 16.</p>
+      <div class="microgreen-card" data-modal="Pšeničná tráva-modal">
+        <img src="Wheatgrass.jpg" alt="Pšeničná tráva">
+        <h3>Pšeničná tráva<br>Wheatgrass </h3>
+        <p>Svieža a výrazná, s jemne sladkastou trávovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy17-modal">
         <img src="novy17.jpg" alt="Nový produkt 17">
@@ -1845,11 +1845,65 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Preskúmajte svetové chute s jemnou sladkosťou Dunn hrachu! 🌍🌿</pre>
     </div>
   </div>
-  <div id="novy16-modal" class="modal">
+  <div id="Pšeničná tráva-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 16</h3>
-      <pre>Informácie o Nový produkt 16 budú dostupné čoskoro.</pre>
+      <h3>Benefity Pšeničnej Trávy (Wheatgrass)</h3>
+      <pre>Pšeničná tráva microgreens majú intenzívnu sviežu chuť a sú známe svojimi detoxikačnými a výživovými vlastnosťami. Ideálne pre milovníkov zdravého životného štýlu! 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 30 kcal
+✅ Bielkoviny: 2,5 g
+✅ Sacharidy: 6,0 g
+✅ Vláknina: 3,5 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v pšeničnej tráve:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 💧 Vitamín E – prispieva k ochrane buniek pred poškodením.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+
+🔵 Minerály v pšeničnej tráve:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🦴 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• 🧠 Selen – prispieva k ochrane buniek pred oxidačným stresom.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k prirodzenej detoxikácii organizmu.
+• 🧪 Enzýmy – podporujú trávenie a metabolizmus.
+• 🔥 Aminokyseliny – základné stavebné kamene bielkovín.
+
+💡 Prečo zaradiť pšeničnú trávu do stravy?
+✅ Detoxikácia – chlorofyl pomáha čistiť organizmus.
+🌱 Vitamín C a selén – posilňujú imunitný systém.
+⚡ Horčík a železo – podporujú energiu a krvný obeh.
+
+👉 Tip:
+Pšeničná tráva je viac než len ingrediencia! Vyskúšajte ju v netradičných formách:
+• 🧴 V domácich maskách – zmiešajte s medom a jogurtom pre osviežujúcu pleťovú kúru.
+• 🧊 V detoxikačných ice cubes – zmrazte s citrónovou šťavou a pridajte do vody.
+• 🍸 V zelených kokteiloch – kombinujte s vodkou, limetkou a agávovým sirupom.
+• 🍵 V shotoch – užívajte 30 ml čerstvej šťavy ráno pre energiu.
+• 🥗 V raw dezertoch – pridajte do energetických tyčiniek s datľami a orechmi.
+• 🧉 V zelenom latté – zmiešajte s mandľovým mliekom a vanilkou.
+• 🌯 V raw wrapoch – zabalte do listov salátu s avokádom a kliešťkami.
+
+⚠️ Alergény:
+Pšeničná tráva je prirodzene bezlepková, ale patrí do čeľade Poaceae. Môže vyvolať reakcie u osôb citlivých na trávy.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Transformujte svoju stravu aj krásu silou pšeničnej trávy! 💚✨</pre>
     </div>
   </div>
   <div id="novy17-modal" class="modal">
