--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <div class="microgreen-card" data-modal="Čínska kapusta-modal">
         <img src="PakChoi.jpg" alt="Čínska kapusta">
         <h3>Čínska kapusta<br>Pak Choi</h3>
-        <p>Jemne korenistá a chrumkavá, s osviežujúcou chuťou.</p>
+        <p>Jemne korenistá a chrumkavá,   s osviežujúcou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Pestrec mariánsky-modal">
         <img src="Pestrec mariánsky.jpg" alt="Pestrec mariánsky">
@@ -358,7 +358,7 @@
       <div class="microgreen-card" data-modal="Červený ruský kel-modal">
         <img src="Kale Red.jpg" alt="Červený ruský kel">
         <h3>Červený ruský kel<br>Kale, Red Russian</h3>
-        <p>Jemný a mierne sladkastý, s nádychom kapustovej chuti.</p>
+        <p>Jemný a mierne sladkastý,   s nádychom kapustovej chuti.</p>
       </div>
       <div class="microgreen-card" data-modal="Repa-modal">
         <img src="Turnip.jpg" alt="Repa">
@@ -373,12 +373,12 @@
       <div class="microgreen-card" data-modal="Červená kapusta-modal">
         <img src="Cabbage.jpg" alt="Červená kapusta 10">
         <h3>Červená kapusta<br>Red Cabbage</h3>
-        <p>Jemne sladkastá a chrumkavá, s typickou kapustovou príchuťou.</p>
+        <p>Jemne sladkastá a chrumkavá,   s typickou kapustovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Toskánsky čierny kel-modal">
         <img src="Kale, Tuscan Black.jpg" alt="Toskánsky čierny kel">
         <h3>Toskánsky čierny kel<br>Kale, Tuscan Black</h3>
-        <p>Jemný a zemito sladkastý, s bohatou kapustovou chuťou.</p>
+        <p>Jemný a zemito sladkastý,   s bohatou kapustovou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Mungo fazuľa-modal">
         <img src="Mung Bean.jpg" alt="Mungo fazuľa">
@@ -387,8 +387,8 @@
       </div>
       <div class="microgreen-card" data-modal="Červená šošovica-modal">
         <img src="Lentis Red.jpg" alt="Červená šošovica">
-        <h3>Červená šošovica<br>Red Lentils/h3>
-        <p>Jemná a mierne sladkastá, s hladkou šošovicovou príchuťou.</p>
+        <h3>Červená šošovica<br>Red Lentils</h3>
+        <p>Jemná a mierne sladkastá,   s hladkou šošovicovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Cícer-modal">
         <img src="Chickpea.jpg" alt="Cícer">
