--- a/index.html
+++ b/index.html
@@ -1919,7 +1919,7 @@ Transformujte svoju stravu aj krásu silou pšeničnej trávy! 💚✨</pre>
     <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 2rem; justify-content: center;">
       <!-- Textová časť -->
       <div style="flex: 1; min-width: 280px; text-align: center; line-height: 1.6;">
-        <p><strong>Cena:</strong> 4 € za jeden kus microgreens – bez rozdielu druhu 🌱</p>
+        <p><strong>Cena:</strong> 4 EUR (s DPH) za jeden kus microgreens – bez rozdielu druhu 🌱</p>
         <p>Naše microgreens dodávame <strong>“netrhané”</strong> – stále zasadené <strong>v 100% organickom vegánskom kokosovom substráte</strong> 🥥. Takto si udržia <strong>maximálnu čerstvosť, skvelú chuť aj vôňu!</strong></p>
         <p><strong>Doprava? Žiadny problém!</strong> 🚗
           Osobne doručíme v rámci <strong>Trnavy a blízkeho okolia – úplne ZDARMA</strong> 🏡
